--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
 @import "./clear.scss";
-
+@import "./variables.scss";
 .container {
   max-width: 1240px;
   margin: 0 auto;
@@ -7,4 +7,5 @@
 
 .wrapper {
   min-height: 100%;
+  background-color: $background_color;
 }
