--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,3 +9,22 @@
   min-height: 100%;
   background-color: $background_color;
 }
+
+*::-webkit-scrollbar {
+  width: 4px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: inherit;
+  opacity: 0;
+}
+
+*::-webkit-scrollbar-track-piece {
+  background-color: inherit;
+  opacity: 0;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: $grey_color;
+  border-radius: 8px;
+}
