--- a/src/components/Block/index.module.scss
+++ b/src/components/Block/index.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
+    flex: 0 1 15%;
   }
 
   .button_container {
@@ -23,5 +24,16 @@
   }
   &__value {
     @include textRoboto(16px, 400, 19px, $black_color);
+  }
+  &__address_value {
+    @include textRoboto(16px, 400, 19px, $black_color);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    width: 100%;
+  }
+  &__address {
+    max-width: 200px;
   }
 }
