--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,9 @@ $background_color: #fafbfc;
 $danger_color: #f51625;
 $grey_color: #a6afbe;
 $black_color: #012126;
+
+:root {
+  --toastify-color-progress-light: #109cf1 !important;
+  --toastify-text-color-light: #012126 !important;
+  --toastify-font-family: Roboto !important;
+}
