--- a/src/components/Transaction/index.module.scss
+++ b/src/components/Transaction/index.module.scss
@@ -5,6 +5,17 @@
   padding: 16px 24px;
   border-bottom: 1px solid $grey_color;
 
+  &__title_wrapper {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+  }
+
+  &__delete_container {
+    max-width: 300px;
+    height: 40px;
+  }
+
   &__title_container {
     display: flex;
     flex-direction: column;
